--- a/data/meson.build
+++ b/data/meson.build
@@ -1,8 +1,8 @@
+subdir('ui')
 subdir('css')
 subdir('icons')
 subdir('images')
 
-#
 install_subdir(
                        join_paths('logo', 'icons'),
           install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'icons'),
