Add additonal utility category
Signed-off-by: Kolja <razzeee@gmail.com>

--- a/data/com.vysp3r.ProtonPlus.desktop.in
+++ b/data/com.vysp3r.ProtonPlus.desktop.in
@@ -4,5 +4,5 @@ Exec=com.vysp3r.ProtonPlus
 Icon=com.vysp3r.ProtonPlus
 Terminal=false
 Type=Application
-Categories=Game;
+Categories=Game;Utility;
 StartupNotify=true
