WIP Part 20: Refactor

--- a/src/meson.build
+++ b/src/meson.build
@@ -53,8 +53,10 @@ protonplus_sources = files(
   'models/runners/kron4ek-wine-builds-vanilla.vala',
   'models/runners/other.vala',
   'models/runners/dxvk-async-sporif.vala',
+  'models/runners/dxvk-async-sarek.vala',
   'models/runners/dxvk-async-gnusenpai.vala',
   'models/runners/dxvk-gpl-async-ph42on.vala',
+  'models/runners/dxvk-sarek.vala',
   'models/runners/dxvk-doitsujin.vala',
   'models/runners/vkd3d-lutris.vala',
   'models/runners/vkd3d-proton.vala',
