--- a/data/com.vysp3r.ProtonPlus.metainfo.xml.in
+++ b/data/com.vysp3r.ProtonPlus.metainfo.xml.in
@@ -84,6 +84,14 @@
   </screenshots>
 
   <releases>
+    <release version="0.4.24" date="2025-02-16">
+      <description>
+        <ul>
+          <li>🐛 Fix HGL support</li>
+          <li>🌐 Updated German translation</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.4.23" date="2025-02-16">
       <description>
         <ul>
