--- a/data/com.vysp3r.ProtonPlus.metainfo.xml.in
+++ b/data/com.vysp3r.ProtonPlus.metainfo.xml.in
@@ -80,6 +80,14 @@
   </screenshots>
 
   <releases>
+    <release version="0.4.28" date="2025-05-25">
+      <description>
+        <ul>
+          <li>🐛 Added check for inactive Steam installations</li>
+          <li>🧑‍💻 Updated runtime to GNOME 48</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.4.27" date="2025-03-11">
       <description>
         <ul>
