--- a/data/com.vysp3r.ProtonPlus.metainfo.xml.in
+++ b/data/com.vysp3r.ProtonPlus.metainfo.xml.in
@@ -24,6 +24,7 @@
       <li>NorthstarProton</li>
       <li>Proton-GE RTSP</li>
       <li>Proton CachyOS</li>
+      <li>Proton EM</li>
       <li>Proton Tkg</li>
       <li>Proton Sarek</li>
       <li>Kron4ek Wine-Builds Vanilla</li>
