Fix typo in metainfo

--- a/data/com.vysp3r.ProtonPlus.metainfo.xml.in
+++ b/data/com.vysp3r.ProtonPlus.metainfo.xml.in
@@ -84,7 +84,7 @@
     <release version="0.4.30" date="2025-05-26">
       <description>
         <ul>
-          <li>✨ Added support for Proton-EM</li>
+          <li>✨ Added support for Proton EM</li>
         </ul>
       </description>
     </release>
