--- a/data/meson.build
+++ b/data/meson.build
@@ -33,7 +33,7 @@ appstream_file = i18n.merge_file(
 
 appstream_util = find_program('appstream-util', required: false)
 if appstream_util.found()
-  test('Validate appstream file', appstream_util, args: ['validate', appstream_file])
+  test('Validate appstream file', appstream_util, args: ['validate-relax', '--nonet', appstream_file])
 endif
 
 install_data('com.vysp3r.ProtonPlus.gschema.xml',
