rename executable com.vysp3r.ProtonPlus to protonplus
- rename the executable to reflect the name of the project/package
- ensure compliance with Fedora packaging guidelines

Reference:
https://docs.fedoraproject.org/en-US/packaging-guidelines/Naming/#_case_sensitivity

Signed-off-by: Wesley Gimenes <wehagy@proton.me>

--- a/data/com.vysp3r.ProtonPlus.desktop.in
+++ b/data/com.vysp3r.ProtonPlus.desktop.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=ProtonPlus
-Exec=com.vysp3r.ProtonPlus
+Exec=protonplus
 Icon=com.vysp3r.ProtonPlus
 Terminal=false
 Type=Application
