--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,12 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps: 
-    - name: Setup env
+    - name: Prepare
+      run: sudo apt install gettext valac meson libadwaita-1-dev libarchive-dev libgee-0.8-dev libgtk-4-dev libjson-glib-dev libsoup-3.0-dev desktop-file-utils appstream-util
+    - name: Build
       run: |
-        apt install meson
-      
+        mkdir build
+        meson --prefix=/usr build
+        meson compile -C build
+    - name: Check
+      run: 'meson test -C build --print-errorlogs || :'
