--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build & Test (WIP)
+name: Build & Check
 
 on: 
   pull_request:
@@ -14,13 +14,12 @@ jobs:
       run: |
         sudo apt update
         sudo apt install gettext valac meson libadwaita-1-dev libarchive-dev libgee-0.8-dev libgtk-4-dev libjson-glib-dev libsoup-3.0-dev desktop-file-utils appstream-util
-    - name: Checkout
+    - name: Checkout pull request
       uses: actions/checkout@v4.2.2
       with:
           ref: ${{ github.event.pull_request.head.sha }}
     - name: Build
       run: |
-        ls
         mkdir build
         meson --prefix=/usr build
         meson compile -C build
