Added Kron4ek Proton builds.

--- a/data/com.vysp3r.ProtonPlus.metainfo.xml.in
+++ b/data/com.vysp3r.ProtonPlus.metainfo.xml.in
@@ -28,6 +28,7 @@
       <li>Proton EM</li>
       <li>Proton Tkg</li>
       <li>Proton Sarek</li>
+      <li>Kron4ek Proton</li>
       <li>Kron4ek Wine-Builds Vanilla</li>
       <li>Kron4ek Wine-Builds Staging</li>
       <li>Kron4ek Wine-Builds Staging-Tkg</li>
