WIP Part 16: Steam Integration

--- a/src/meson.build
+++ b/src/meson.build
@@ -3,27 +3,30 @@ protonplus_sources = files(
 
   'widgets/application.vala',
   'widgets/window.vala',
-  'widgets/info-box.vala',
   'widgets/status-box.vala',
-  'widgets/sidebar.vala',
-  'widgets/sidebar-row.vala',
-  'widgets/release-row.vala',
-  'widgets/load-more-row.vala',
-  'widgets/launcher-box.vala',
-  'widgets/runner-group.vala',
-  'widgets/runner-row.vala',
-  'widgets/description-dialog.vala',
-  'widgets/library-box.vala',
-  'widgets/game-row.vala',
-  'widgets/mass-edit-dialog.vala',
-  'widgets/remove-dialog.vala',
-  'widgets/install-dialog.vala',
-  'widgets/upgrade-dialog.vala',
-  'widgets/shortcut-button.vala',
 
-  'widgets/release-rows/steamtinkerlaunch-row.vala',
-  'widgets/release-rows/basic-row.vala',
-  'widgets/release-rows/installed-row.vala',
+  'widgets/sidebar/sidebar.vala',
+  'widgets/sidebar/sidebar-row.vala',
+
+  'widgets/main/info-box.vala',
+  'widgets/main/release-row.vala',
+  'widgets/main/load-more-row.vala',
+  'widgets/main/launcher-box.vala',
+  'widgets/main/runner-group.vala',
+  'widgets/main/runner-row.vala',
+  'widgets/main/description-dialog.vala',
+  'widgets/main/remove-dialog.vala',
+  'widgets/main/install-dialog.vala',
+  'widgets/main/upgrade-dialog.vala',
+  'widgets/main/steamtinkerlaunch-row.vala',
+  'widgets/main/basic-row.vala',
+  'widgets/main/installed-row.vala',
+
+  'widgets/library/library-box.vala',
+  'widgets/library/game-row.vala',
+  'widgets/library/mass-edit-dialog.vala',
+  'widgets/library/mass-edit-button.vala',
+  'widgets/library/shortcut-button.vala',
 
   'models/group.vala',
   'models/launcher.vala',
