--- a/data/com.vysp3r.ProtonPlus.metainfo.xml.in
+++ b/data/com.vysp3r.ProtonPlus.metainfo.xml.in
@@ -95,6 +95,7 @@
           <li>✨ Added the ability to set the default compatibility tool for Steam games</li>
           <li>🌐 Updated Chinese localization</li>
           <li>🌐 Updated German localization</li>
+          <li>🌐 Updated Portuguese localization</li>
         </ul>
       </description>
     </release>
