--- a/data/com.vysp3r.ProtonPlus.metainfo.xml.in
+++ b/data/com.vysp3r.ProtonPlus.metainfo.xml.in
@@ -103,6 +103,7 @@
           <li>🐛 Fix a crash</li>
           <li>🌐 Updated Chinese localization</li>
           <li>🌐 Updated Indonesian localization</li>
+          <li>🌐 Updated Portuguese localization</li>
         </ul>
       </description>
     </release>
