Improved the UI/UX

--- a/src/meson.build
+++ b/src/meson.build
@@ -3,43 +3,42 @@ protonplus_sources = files(
   'globals.vala',
 
   'widgets/application.vala',
-  'widgets/window.vala',
   'widgets/status-box.vala',
+  'widgets/window.vala',
 
-  'widgets/sidebar/sidebar.vala',
-  'widgets/sidebar/sidebar-row.vala',
+  'widgets/launchers-popover/launchers-popover-button.vala',
+  'widgets/launchers-popover/launchers-popover-list-row.vala',
 
-  'widgets/main/info-box.vala',
-  'widgets/main/release-row.vala',
-  'widgets/main/load-more-row.vala',
-  'widgets/main/launcher-box.vala',
-  'widgets/main/runner-group.vala',
-  'widgets/main/runner-row.vala',
-  'widgets/main/description-dialog.vala',
-  'widgets/main/remove-dialog.vala',
-  'widgets/main/install-dialog.vala',
-  'widgets/main/upgrade-dialog.vala',
-  'widgets/main/steamtinkerlaunch-row.vala',
-  'widgets/main/basic-row.vala',
-  'widgets/main/installed-row.vala',
+  'widgets/runners/release-row.vala',
+  'widgets/runners/load-more-row.vala',
+  'widgets/runners/runner-group.vala',
+  'widgets/runners/runner-row.vala',
+  'widgets/runners/description-dialog.vala',
+  'widgets/runners/remove-dialog.vala',
+  'widgets/runners/install-dialog.vala',
+  'widgets/runners/upgrade-dialog.vala',
+  'widgets/runners/steamtinkerlaunch-row.vala',
+  'widgets/runners/basic-row.vala',
+  'widgets/runners/installed-row.vala',
+  'widgets/runners/runners-box.vala',
 
-  'widgets/library/library-box.vala',
-  'widgets/library/game-row.vala',
-  'widgets/library/extra-button.vala',
-  'widgets/library/mass-edit-dialog.vala',
-  'widgets/library/mass-edit-button.vala',
-  'widgets/library/shortcut-button.vala',
-  'widgets/library/sort-by-name-button.vala',
-  'widgets/library/sort-by-tool-button.vala',
-  'widgets/library/select-button.vala',
-  'widgets/library/unselect-button.vala',
-  'widgets/library/launch-options-dialog.vala',
-  'widgets/library/profile-dialog.vala',
-  'widgets/library/profile-button.vala',
-  'widgets/library/default-tool-button.vala',
-  'widgets/library/default-tool-dialog.vala',
-  'widgets/library/compatibility-tool-row.vala',
-  'widgets/library/compatibility-tool-dropdown.vala',
+  'widgets/games/games-box.vala',
+  'widgets/games/game-row.vala',
+  'widgets/games/extra-button.vala',
+  'widgets/games/mass-edit-dialog.vala',
+  'widgets/games/mass-edit-button.vala',
+  'widgets/games/shortcut-button.vala',
+  'widgets/games/sort-by-name-button.vala',
+  'widgets/games/sort-by-tool-button.vala',
+  'widgets/games/select-button.vala',
+  'widgets/games/unselect-button.vala',
+  'widgets/games/launch-options-dialog.vala',
+  'widgets/games/profile-dialog.vala',
+  'widgets/games/profile-button.vala',
+  'widgets/games/default-tool-button.vala',
+  'widgets/games/default-tool-dialog.vala',
+  'widgets/games/compatibility-tool-row.vala',
+  'widgets/games/compatibility-tool-dropdown.vala',
 
   'models/group.vala',
   'models/steam-profile.vala',
